--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ plugins {
 
 group = 'com.davidbneto'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '18'
 
 repositories {
     mavenCentral()
@@ -16,6 +15,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'javax.validation:validation-api:2.0.1.Final'
+    implementation 'org.mapstruct:mapstruct:1.5.2.Final'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 }
