--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,11 @@ dependencies {
     implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'org.mapstruct:mapstruct:1.5.2.Final'
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
+
+    runtimeOnly 'org.mapstruct:mapstruct-processor:1.5.2.Final'
+
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 }
